# snowmad

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_creds.config  setup.cfg
snowmad/: snowflake.py  terraform.py
snowmad.egg-info/: PKG-INFO
