[metadata]
name = snowmad
version = 0.0.1 
author = Preston Blackburn
author_email = prestonblckbrn@gmail.com
description = A Snowflake object transcription library for capturing Snowflake objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrestonBlackburn/snowmad
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independant


[options]
packages = find:
python = >=3.7
include_package_data = True
