[metadata]
name = snowmad
version = 0.0.3
author = Preston Blackburn
author_email = prestonblckbrn@gmail.com
description = A Snowflake object transcription library for capturing Snowflake objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrestonBlackburn/snowmad
classifiers = 
    Programming Language :: Python :: 3.0
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
python = >=3.7
include_package_data = True
